--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -135,8 +135,8 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">29</span><span class="ball">16</span><span class="ball">5</span><span class="ball">25</span><span class="ball">12</span><span class="ball">30</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 3, 2018</b></span></h4>
+	<h4><span class="ball">41</span><span class="ball">51</span><span class="ball">3</span><span class="ball">49</span><span class="ball">47</span><span class="ball">21</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 6, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
@@ -208,8 +208,8 @@ function openNav() {
 	<br>
 	<img src="images/6-42.png" alt="PCSO Lotto 6/42 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>PCSO lotto 6/42 result</strong></span></h2>
-	<h4><span class="ball">26</span><span class="ball">16</span><span class="ball">30</span><span class="ball">19</span><span class="ball">5</span><span class="ball">11</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 4, 2018</b></span></h4>
+	<h4><span class="ball">40</span><span class="ball">28</span><span class="ball">15</span><span class="ball">13</span><span class="ball">11</span><span class="ball">24</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 6, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
@@ -229,7 +229,7 @@ function openNav() {
 	<br>
 	<img src="images/Swertres.png" alt="Swertres Lotto result"style="width:60%;max-width:110px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Swertres lotto result</strong></span></h2>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 5, 2018</b></span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 7, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -244,21 +244,21 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">0</span></td>
+	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">3</span>&nbsp;&nbsp;<span class="ball text-xl">1</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">3</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -284,7 +284,7 @@ function openNav() {
 	<br>
 	<img src="images/EZ2lotto.png" alt="PCSO EZ 2 Lotto result"style="width:60%;max-width:110px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>EZ 2 lotto result</strong></span></h2>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 5, 2018</b></span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 7, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -299,21 +299,21 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">14</span>&nbsp;&nbsp;<span class="ball text-xl">12</span></td>
+	<td><span class="ball text-xl">25</span>&nbsp;&nbsp;<span class="ball text-xl">13</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">15</span>&nbsp;&nbsp;<span class="ball text-xl">23</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -350,8 +350,8 @@ function openNav() {
 	<br>
 	<img src="images/6-Digit.png" alt="PCSO 6-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>6-Digit Game result</strong></span></h2>
-	<h4><span class="ball">2</span><span class="ball">3</span><span class="ball">6</span><span class="ball">5</span><span class="ball">1</span><span class="ball">9</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 4, 2018</b></span></h4>
+	<h4><span class="ball">1</span><span class="ball">0</span><span class="ball">9</span><span class="ball">4</span><span class="ball">6</span><span class="ball">8</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 6, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
