--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -135,8 +135,8 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">41</span><span class="ball">51</span><span class="ball">3</span><span class="ball">49</span><span class="ball">47</span><span class="ball">21</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 6, 2018</b></span></h4>
+	<h4><span class="ball">32</span><span class="ball">44</span><span class="ball">51</span><span class="ball">36</span><span class="ball">7</span><span class="ball">39</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 8, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
@@ -187,13 +187,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4><span class="ball">9</span><span class="ball">38</span><span class="ball">16</span><span class="ball">34</span><span class="ball">10</span><span class="ball">40</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 5, 2018</b></span></h4>
+	<h4><span class="ball">28</span><span class="ball">40</span><span class="ball">31</span><span class="ball">21</span><span class="ball">11</span><span class="ball">4</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 8, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;8,910,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;9,594,609</h4>
+	<h4>Number of Winners : 1</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -258,7 +258,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">0</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -313,7 +313,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">31</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -329,8 +329,8 @@ function openNav() {
 	<br>
 	<img src="images/4-Digit.png" alt="PCSO 4-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>4-Digit Game result</strong></span></h2>
-	<h4><span class="ball">7</span>&nbsp;<span class="ball">0</span>&nbsp;<span class="ball">5</span>&nbsp;<span class="ball">9</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 5, 2018</b></span></h4>
+	<h4><span class="ball">2</span>&nbsp;<span class="ball">6</span>&nbsp;<span class="ball">7</span>&nbsp;<span class="ball">3</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 8, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
