--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -99,15 +99,15 @@ function openNav() {
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> EZ 2 Lotto draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 
-	<h2 style="color:#4B77BE">Monday, January 8, 2018</time></h2>
+	<h2 style="color:#4B77BE">Tuesday, January 9, 2018</time></h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 	<thead><tr><th>TIME OF DRAW</th><th>RESULT</th></tr></thead>
 	<tr><td>11 AM</td>
-	<td><span class="ball text-xl">22</span>&nbsp;&nbsp;<span class="ball text-xl">31</span></td></tr>
+	<td><span class="ball text-xl">30</span>&nbsp;&nbsp;<span class="ball text-xl">31</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">18</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>9 PM</td>
-	<td><span class="ball text-xl">31</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the two (2) winning numbers in <b>exact</b> order.</p>
@@ -228,7 +228,7 @@ function openNav() {
     <div style="padding:16px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%; max-width:500px">
     <p style="font-size: 17px"><b>Related searches for this topic :</b></p>
     <div class="scroll">
-    <p style="font-size:15px">'EZ2 result today Jan 8' - 'EZ2 11am result January 8' - 'EZ2 4pm result January 8' - 'EZ2 hearing January 8' - 'EZ2 9pm result January 8' - lotto result jan 8 2018' - 'EZ2 hearing jan 8' - 'EZ2 11a m result' - 'PCSO result January 8 2018' - 'EZ2 jan 8 2018' - 'EZ2 4p m result' - 'EZ2 hearing January 8, 2018' - 'PCSO lotto result jan 8 2018' - 'PCSO result 11am January 8 2018' - 'EZ2 9p m result' - 'PCSO result jan 8 2018' - 'PCSO EZ2 result January 8 2018' - 'PCSO EZ2 jan 8 2018'</p>
+    <p style="font-size:15px">'EZ2 result today Jan 9' - 'EZ2 11am result January 9' - 'EZ2 4pm result January 9' - 'EZ2 hearing January 9' - 'EZ2 9pm result January 9' - lotto result jan 9 2018' - 'EZ2 hearing jan 9' - 'EZ2 11a m result' - 'PCSO result January 9 2018' - 'EZ2 jan 9 2018' - 'EZ2 4p m result' - 'EZ2 hearing January 9, 2018' - 'PCSO lotto result jan 9 2018' - 'PCSO result 11am January 9 2018' - 'EZ2 9p m result' - 'PCSO result jan 9 2018' - 'PCSO EZ2 result January 9 2018' - 'PCSO EZ2 jan 9 2018'</p>
     </div></div></div><br>
     
     <h3 style="color:#4B77BE;"><strong>How To Claim EZ 2 Lotto Prize?</strong></h3>
