--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -114,12 +114,12 @@ function openNav() {
 	<div class="half" style="text-align:center">
 	<img src="images/6-58.png" alt="Ultra lotto 6/58 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Ultra lotto 6/58 result</strong></span></h2>
-	<h4><span class="ball">56</span><span class="ball">45</span><span class="ball">39</span><span class="ball">35</span><span class="ball">42</span><span class="ball">14</span></h4>
+	<h4><span class="ball">39</span><span class="ball">12</span><span class="ball">31</span><span class="ball">16</span><span class="ball">29</span><span class="ball">17</span></h4>
     <h4 class="yf"><span itemprop="entry-content"><b>January 7, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;193,694,784</h4>
+	<h4>Jackpot Prize : &#8369;199,439,260</h4>
 	<h4>Number of Winners : 0</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -156,12 +156,12 @@ function openNav() {
 	<br>
 	<img src="images/6-49.png" alt="Super Lotto 6/49 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Super lotto 6/49 result</strong></span></h2>
-	<h4><span class="ball">16</span><span class="ball">24</span><span class="ball">4</span><span class="ball">31</span><span class="ball">33</span><span class="ball">42</span></h4>
+	<h4><span class="ball">4</span><span class="ball">1</span><span class="ball">36</span><span class="ball">22</span><span class="ball">49</span><span class="ball">40</span></h4>
     <h4 class="yf"><span itemprop="entry-content"><b>January 7, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;48,766,608</h4>
+	<h4>Jackpot Prize : &#8369;52,264,900</h4>
 	<h4>Number of Winners : 0</h4>
 	</div><a name="45Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Super-lotto-6-49-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -208,13 +208,13 @@ function openNav() {
 	<br>
 	<img src="images/6-42.png" alt="PCSO Lotto 6/42 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>PCSO lotto 6/42 result</strong></span></h2>
-	<h4><span class="ball">40</span><span class="ball">28</span><span class="ball">15</span><span class="ball">13</span><span class="ball">11</span><span class="ball">24</span></h4>
+	<h4><span class="ball">7</span><span class="ball">11</span><span class="ball">27</span><span class="ball">28</span><span class="ball">42</span><span class="ball">34</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>January 6, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;5,940,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;7,893,045</h4>
+	<h4>Number of Winners : 1</h4>
 	</div><a name="SwertresResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/PCSO-lotto-6-42-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -258,7 +258,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -313,7 +313,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -350,8 +350,8 @@ function openNav() {
 	<br>
 	<img src="images/6-Digit.png" alt="PCSO 6-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>6-Digit Game result</strong></span></h2>
-	<h4><span class="ball">1</span><span class="ball">0</span><span class="ball">9</span><span class="ball">4</span><span class="ball">6</span><span class="ball">8</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 6, 2018</b></span></h4>
+	<h4><span class="ball">3</span><span class="ball">4</span><span class="ball">9</span><span class="ball">1</span><span class="ball">8</span><span class="ball">0</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 9, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
