--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -229,7 +229,7 @@ function openNav() {
 	<br>
 	<img src="images/Swertres.png" alt="Swertres Lotto result"style="width:60%;max-width:110px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Swertres lotto result</strong></span></h2>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 10, 2018</b></span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 12, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -244,14 +244,14 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td>
+	<td><span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
@@ -284,7 +284,7 @@ function openNav() {
 	<br>
 	<img src="images/EZ2lotto.png" alt="PCSO EZ 2 Lotto result"style="width:60%;max-width:110px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>EZ 2 lotto result</strong></span></h2>
-	<h4 class="yf"><span itemprop="entry-content"><b>January 10, 2018</b></span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>January 12, 2018</b></span></h4>
 	</div>
 	<div class="half">
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
@@ -299,14 +299,14 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">18</span>&nbsp;&nbsp;<span class="ball text-xl">8</span></td>
+	<td><span class="ball text-xl">19</span>&nbsp;&nbsp;<span class="ball text-xl">22</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">27</span>&nbsp;&nbsp;<span class="ball text-xl">23</span></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
