--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -99,13 +99,13 @@ function openNav() {
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> EZ 2 Lotto draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 
-	<h2 style="color:#4B77BE">Wednesday, January 10, 2018</time></h2>
+	<h2 style="color:#4B77BE">Friday, January 12, 2018</time></h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 	<thead><tr><th>TIME OF DRAW</th><th>RESULT</th></tr></thead>
 	<tr><td>11 AM</td>
-	<td><span class="ball text-xl">18</span>&nbsp;&nbsp;<span class="ball text-xl">8</span></td></tr>
+	<td><span class="ball text-xl">19</span>&nbsp;&nbsp;<span class="ball text-xl">22</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">27</span>&nbsp;&nbsp;<span class="ball text-xl">23</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>9 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
@@ -228,7 +228,7 @@ function openNav() {
     <div style="padding:16px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%; max-width:500px">
     <p style="font-size: 17px"><b>Related searches for this topic :</b></p>
     <div class="scroll">
-    <p style="font-size:15px">'EZ2 result today Jan 9' - 'EZ2 11am result January 9' - 'EZ2 4pm result January 9' - 'EZ2 hearing January 9' - 'EZ2 9pm result January 9' - lotto result jan 9 2018' - 'EZ2 hearing jan 9' - 'EZ2 11a m result' - 'PCSO result January 9 2018' - 'EZ2 jan 9 2018' - 'EZ2 4p m result' - 'EZ2 hearing January 9, 2018' - 'PCSO lotto result jan 9 2018' - 'PCSO result 11am January 9 2018' - 'EZ2 9p m result' - 'PCSO result jan 9 2018' - 'PCSO EZ2 result January 9 2018' - 'PCSO EZ2 jan 9 2018'</p>
+    <p style="font-size:15px">'EZ2 result today Jan 12' - 'EZ2 11am result January 12' - 'EZ2 4pm result January 12' - 'EZ2 hearing January 12' - 'EZ2 9pm result January 12' - lotto result jan 12 2018' - 'EZ2 hearing jan 12' - 'EZ2 11a m result' - 'PCSO result January 12 2018' - 'EZ2 jan 12 2018' - 'EZ2 4p m result' - 'EZ2 hearing January 12, 2018' - 'PCSO lotto result jan 12 2018' - 'PCSO result 11am January 12 2018' - 'EZ2 9p m result' - 'PCSO result jan 12 2018' - 'PCSO EZ2 result January 12 2018' - 'PCSO EZ2 jan 12 2018'</p>
     </div></div></div><br>
     
     <h3 style="color:#4B77BE;"><strong>How To Claim EZ 2 Lotto Prize?</strong></h3>
