--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -306,7 +306,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">12</span>&nbsp;&nbsp;<span class="ball text-xl">21</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
