--- a/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
+++ b/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
@@ -297,7 +297,7 @@ function closeNav() {
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
-    style="display:block"
+    style="display:block; height:100px"
     data-ad-format="fluid"
     data-ad-layout-key="-gx"
     data-ad-client="ca-pub-8489405167836126"
