--- a/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
+++ b/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
@@ -272,10 +272,10 @@ function closeNav() {
     <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Greenwich?</a></p></div>
     </div>
-	        <div style="width:100%; height:100px; border-top:1px solid #ccc;">
+	        <div style="width:100%; height:105px; border-top:1px solid #ccc;">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
-    style="display:block; height:100px"
+    style="display:block; height:100px; padding:2px"
     data-ad-format="fluid"
     data-ad-layout-key="-hk+i-24-7k+mb"
     data-ad-client="ca-pub-8489405167836126"
