--- a/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
+++ b/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
@@ -284,7 +284,7 @@ function closeNav() {
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
  
-    <div style="width:100%; height:100px; border-top:1px solid #ccc;">
+    <div style="width:100%; height:100px;">
     <div style="width:40%; padding:16px; float:left;">
     <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Chowking?</a></p></div>
